# FinRAG-GRPO

./: .gitignore  README.md  README_zh.md  generate_customer_service_data.py  main.py  merge_and_split_dataset.py  pyproject.toml
docs/: note.md
rm_r1/dataset/mix_data/: mix_data.py  preprocess_data.py
rm_r1/scripts/RLVR/local/: train_rm_r1_rlvr_dpsk_distilled_7b.sh
rm_r1/verl/trainer/: main_ppo.py
rm_r1/verl/trainer/config/: ppo_trainer.yaml
rm_r1/verl/trainer/ppo/: ray_trainer.py
rm_r1/verl/utils/dataset/: rl_dataset.py
rm_r1/verl/utils/reward_score/: lm_as_judge.py
rm_r1/verl/workers/: fsdp_workers.py
